Remove period character

--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -3,7 +3,7 @@
     <img src="assets/{{course.image}}" class="card-img-top" [alt]="course.title">
     <div class="card-body">
       <h5 class="card-title">{{course.title}}</h5>
-      <p class="card-text">{{course.description}}.</p>
+      <p class="card-text">{{course.description}}</p>
       <button class="btn btn-primary">Show details</button>
     </div>
     <ul class="list-group list-group-flush">
